<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/status"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_status" />
    <item
        android:id="@+id/survey"
        android:orderInCategory="100"
        android:title="@string/title_survey"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        android:title="@string/title_info"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/title_help"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/terminate"
        android:orderInCategory="100"
        android:title="@string/title_exit"
        app:showAsAction="never" />
</menu>