<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_questionnaires"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_questionnaires" />

    <item
        android:id="@+id/navigation_contactus"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_contactus" />

    <item
        android:id="@+id/navigation_status_new"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_status" />


</menu>
